# hpm-hal-template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
