[package]
name = "hpm-template"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { version = "0.0.1", git = "https://github.com/hpmicro-rs/hpm-hal", rev = "8ac53b0007ab7c353b8def3ccdfbb564ec387af8", features = [
    "rt",
    "embassy",
    "{{ mcu }}",
] }
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
riscv-rt = "0.12.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "0.2"

[profile.dev]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
